diesel_compile_tests/tests/fail/derive_deprecated/deprecated_sqlite_type.stderr
error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(sqlite_type(name = "foo"))]`
 --> tests/fail/derive_deprecated/deprecated_sqlite_type.rs:6:3
  |
6 | #[sqlite_type]
  |   ^^^^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_sqlite_type.rs:10:14
   |
10 | #[sqlite_type()]
   |              ^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_sqlite_type.rs:14:17
   |
14 | #[sqlite_type = 1]
   |                 ^

error[E0599]: no variant or associated item named `foo` found for enum `SqliteType` in the current scope
  --> tests/fail/derive_deprecated/deprecated_sqlite_type.rs:17:10
   |
17 | #[derive(SqlType)]
   |          ^^^^^^^ variant or associated item not found in `SqliteType`
   |
   = note: this error originates in the derive macro `SqlType` (in Nightly builds, run with -Z macro-backtrace for more info)
